add nso_cli connection and compliance functions with test

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,12 @@ CNC_USERNAME=<your_cnc_username>
 CNC_PASSWORD=<your_cnc_password>
 CNC_HOST=<your_cnc_host>
 CNC_PORT=<your_cnc_port>
+
+#============================
+# NSO Connection Settings (pyATS Testbed)
+#============================
+NSO_HOST=<your_nso_ip>
+NSO_USERNAME=<your_nso_ip>
+NSO_PASSWORD=<your_nso_ip>
+NSO_CLI_PORT=<your_nso_ip>
+NSO_CLI_PROTOCOL=ssh
