update download file function

--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,13 @@ PYTHONPATH=.
 # Full list of supported providers:https://docs.litellm.ai/docs/providers
 # Note: In CoffeeAGNTCY, the environment variable for specifying the model is always LLM_MODEL, regardless of the provider.
 # Examples:
-
-# OpenAI
-# LLM_MODEL="openai/<model_of_choice>"
-# OPENAI_API_KEY=<your_openai_api_key>
 COMPLIANCE_AGENT_PORT=9090
 COMPLIANCE_AGENT_IP=0.0.0.0
+
+# OpenAI
+LLM_MODEL="openai/gpt-4o"
+OPENAI_API_KEY=<your_openai_api_key>
+
 # Azure OpenAI
 # LLM_MODEL="azure/<your_deployment_name>"
 # AZURE_API_BASE=https://your-azure-resource.openai.azure.com/
@@ -44,6 +45,20 @@ IDENTITY_SERVICE_API_KEY_COLOMBIA_FARM=xxx
 #============================
 # Local Development Settings
 #============================
+#(not needed when running Docker Compose)
+
+# OTEL environment variables
+# OTLP_HTTP_ENDPOINT="http://localhost:4318"
+
+# === Transport Settings ===
+# NATS (Default):
+# DEFAULT_MESSAGE_TRANSPORT=NATS
+# TRANSPORT_SERVER_ENDPOINT=nats://localhost:4222
+
+# Alternative: SLIM transport (uncomment to use SLIM). The endpoint address must be in the form: http://host:port.
+# For group conversation, SLIM transport is required.
+DEFAULT_MESSAGE_TRANSPORT=SLIM
+TRANSPORT_SERVER_ENDPOINT=http://localhost:46357
 
 
 # === Agntcy TBAC Settings (Local) ===
@@ -51,6 +66,23 @@ IDENTITY_SERVICE_API_KEY_COLOMBIA_FARM=xxx
 IDENTITY_AUTH_ENABLED="true"
 
 # set the variable IDENTITY_SERVICE_API_KEY in different terminals for each service.
+
+
+#============================
+# Frontend Agent Links
+#============================
+# GitHub Base URLs
+VITE_GITHUB_BASE_URL=https://github.com/your-org/your-repo/tree/main
+VITE_GITHUB_APP_SDK_BASE_URL=https://github.com/your-org/your-repo/tree/main
+
+# Agent Directory Base URL
+VITE_AGENT_DIRECTORY_BASE_URL=https://agent.directory/agent
+
+# Provisioning Agent GitHub Paths
+VITE_PROVISIONING_SUPERVISOR_PATH=/agents/supervisors/provisioning/graph/graph.py
+VITE_PROVISIONING_MAPPER_PATH=/agents/provisioning/mapper/agent.py
+VITE_PROVISIONING_ALLOCATOR_PATH=/agents/provisioning/allocator/agent.py
+VITE_PROVISIONING_DEPLOYER_PATH=/agents/provisioning/deployer/agent.py
 
 #============================
 # CNC Connection Settings
@@ -63,8 +95,14 @@ CNC_PORT=<your_cnc_port>
 #============================
 # NSO Connection Settings (pyATS Testbed)
 #============================
-NSO_HOST=<your_nso_ip>
-NSO_USERNAME=<your_nso_ip>
-NSO_PASSWORD=<your_nso_ip>
-NSO_CLI_PORT=<your_nso_ip>
+
+# For Docker: use host.docker.internal
+# For local: use 127.0.0.1 or localhost
+NSO_HOST=127.0.0.1
+NSO_CLI_PORT=2024
+NSO_USERNAME=admin
+NSO_PASSWORD=admin
 NSO_CLI_PROTOCOL=ssh
+NSO_JSONRPC_PORT=8080
+# NSO_HOST_DOWNLOAD defaults to NSO_HOST, only set if different
+# NSO_HOST_DOWNLOAD=127.0.0.1
