add schedule job in cem function

--- a/.env.example
+++ b/.env.example
@@ -87,10 +87,10 @@ VITE_PROVISIONING_DEPLOYER_PATH=/agents/provisioning/deployer/agent.py
 #============================
 # CNC Connection Settings
 #============================
-CNC_USERNAME=<your_cnc_username>
-CNC_PASSWORD=<your_cnc_password>
-CNC_HOST=<your_cnc_host>
-CNC_PORT=<your_cnc_port>
+CWM_ USERNAME=<your_cnc_username>
+CWM_ PASSWORD=<your_cnc_password>
+CWM_ HOST=<your_cnc_host>
+CWM_ PORT=<your_cnc_port>
 
 #============================
 # NSO Connection Settings (pyATS Testbed)
